app-test/testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/check/cmp2.check
testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/src/cmp.cal:7:21: error: = is not supported with T and uint(size=1).
            OUT <-- T(1, false) = 1; // error
                    ^^^^^^^^^^^^^^^